String utils tests implementation; Small improvements